; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_b_out_g.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_b_out_g.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@R_mode = common dso_local global i32 0, align 4
@OTree = common dso_local global i32 0, align 4
@R_end = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @b_out_g to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b_out_g(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %10 = load i32, i32* @R_mode, align 4
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = and i32 %11, 1728
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %26

14:                                               ; preds = %2
  store i32 -1, i32* %7, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i8* @listree_lookup_large(i32* @OTree, i32 %15, i32* %7)
  store i8* %16, i8** %8, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = icmp ne i8* %17, inttoptr (i64 -1 to i8*)
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @SMALL_NODE(i8* %20)
  %22 = call i32 @btree_out_node(i32 %21)
  store i32 %22, i32* %3, align 4
  br label %41

23:                                               ; preds = %14
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @barray_out_node(i32 0, i32 %24)
  store i32 %25, i32* %3, align 4
  br label %41

26:                                               ; preds = %2
  %27 = load i32*, i32** @R_end, align 8
  store i32* %27, i32** %9, align 8
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @store_object_id(i32** %9, i32 %28)
  %30 = load i32, i32* %6, align 4
  %31 = and i32 %30, 256
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %26
  %34 = load i64, i64* %5, align 8
  %35 = trunc i64 %34 to i32
  %36 = load i32*, i32** %9, align 8
  %37 = getelementptr inbounds i32, i32* %36, i32 1
  store i32* %37, i32** %9, align 8
  store i32 %35, i32* %36, align 4
  br label %38

38:                                               ; preds = %33, %26
  %39 = load i32*, i32** %9, align 8
  store i32* %39, i32** @R_end, align 8
  br label %40

40:                                               ; preds = %38
  store i32 0, i32* %3, align 4
  br label %41

41:                                               ; preds = %40, %23, %19
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i8* @listree_lookup_large(i32*, i32, i32*) #1

declare dso_local i32 @btree_out_node(i32) #1

declare dso_local i32 @SMALL_NODE(i8*) #1

declare dso_local i32 @barray_out_node(i32, i32) #1

declare dso_local i32 @store_object_id(i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
